add intital views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,31 @@
 	<p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 
+<div class="container" id="main">
+    <div class="navbar navbar-default navbar-fixed-top">
+    <%= link_to "Home", root_url, class: "navbar-brand pull-left" %>
+    <%= link_to "Loops", loops_path, class: "navbar-text pull-left" %>
+    <%= link_to "Trails", trails_path, class: "navbar-text pull-left" %>
+    <%= link_to "Badges", badges_path, class: "navbar-text pull-left" %>
+    
+    <div class="navbar-text">
+      <center>
+        <%= flash[:notice] %>
+        <%= flash[:alert] %>
+      </center>
+    </div>
+    <% if user_signed_in? %>      <%= link_to "Add Listing", new_property_path, class: "navbar-text pull-right btn-xs btn-warning" %>
+      <%= link_to "Log Out", destroy_user_session_path, method: "delete", class: "navbar-text pull-right" %>
+      <div class="navbar-text pull-right">
+        Logged in as &nbsp; <%= link_to current_user.name, user_path(current_user), id: "white" %>
+      </div>
+    <% else %>
+      <%= link_to "Sign Up", new_user_registration_path, class: "navbar-text pull-right" %>
+      <%= link_to "Log In", new_user_session_path, class: "navbar-text pull-right" %>
+    <% end %>
+  </div>
+
+
 <%= yield %>
 
 </body>
