--- a/app/views/loops/index.html.erb
+++ b/app/views/loops/index.html.erb
@@ -4,7 +4,7 @@
 	<li><h3><%= loop.name %></h3></li>
 	<ul>
 		<% loop.trails.each do |trail| %>
-			<li><%= trail.name %></li>
+			<li><%= link_to trail.name, trail_path(trail) %></li>
 		<% end %>
 	</ul>
 <% end %>
