--- a/app/views/trails/new.html.erb
+++ b/app/views/trails/new.html.erb
@@ -1,21 +1,29 @@
+
+<h1>Add a Trail</h1>
 <%= form_for @trail do |f| %>
 	<div class="form-group">
-    <%= f.text_field :name, placeholder: "Name" %>
+		<%= f.label :name %>
+    <%= f.text_field :name, autofocus: :true %>
   </div>
 	<div class="form-group">
-    <%= f.text_field :length, placeholder: "Length" %>
+		<%= f.label :length %>
+    <%= f.text_field :length %>
   </div>
   <div class="form-group">
-    <%= f.text_field :location, placeholder: "Location" %>
+  	<%= f.label :location %>
+    <%= f.text_field :location%>
   </div>
   <div class="form-group">
-    <%= f.text_field :difficulty, placeholder: "Difficulty" %>
+  	<%= f.label :difficulty %>
+    <%= f.text_field :difficulty%>
   </div>
   <div class="form-group">
+  	<%= f.label :loop_id, "Which loop?" %>
     <%= f.select :loop_id, Loop.all.collect {|l| [ l.name, l.id ] } %>
   </div>
   <div class="form-group">
-    <%= f.text_area :description, placeholder: "Description" %>
+  	<%= f.label :description %>
+    <%= f.text_area :description %>
   </div>
  	<%= f.submit class: "btn btn-success" %>
 <% end %>
