--- a/app/views/badges/new.html.erb
+++ b/app/views/badges/new.html.erb
@@ -8,6 +8,22 @@
     <%= f.label :requirements %>
     <%= f.text_field :requirements %>
   </div>
+   <div class="form-group">
+    <p><%= f.label :badge_type, "Type of Badge" %></p>
+    <p><%= f.radio_button :badge_type, "distance" %>
+    <%= f.label :badge_type, "Trail Distance - for a single trail" %></p>
+
+    <p><%= f.radio_button :badge_type, "summit" %>
+    <%= f.label :badge_type, "Summit Height - for various summit heights" %></p>
+
+    <p><%= f.radio_button :badge_type, "total" %>
+    <%= f.label :badge_type, "Total Distance - for total distance hiked" %></p>
+
+		<p><%= f.radio_button :badge_type, "trail" %>
+    <%= f.label :badge_type, "Completed Trail - for completing a specific trail" %></p>
+    <p><%= f.radio_button :badge_type, "loop" %>
+    <%= f.label :badge_type, "Completed Loop - for completing all trails in a loop" %></p>
+  </div>
 	<%= f.label :trail_ids,  "Which trail(s) is this badge available on?" %><br>
   <%= f.collection_check_boxes :trail_ids, Trail.all, :id, :name %>
  	<%= f.submit class: "btn btn-success" %>
