handle errors when creating new badges,trails,loops

--- a/app/views/trails/new.html.erb
+++ b/app/views/trails/new.html.erb
@@ -1,5 +1,6 @@
 
 <h1>Add a Trail</h1>
+<%= render('layouts/errors', object: @trail) %>
 <%= form_for @trail do |f| %>
 	<div class="form-group">
 		<%= f.label :name %>
