--- a/app/views/badges/new.html.erb
+++ b/app/views/badges/new.html.erb
@@ -1,4 +1,5 @@
 <h1>Add a Badge</h1>
+<%= render('layouts/errors', object: @badge) %>
 <%= form_for @badge do |f| %>
 	<div class="form-group">
     <%= f.label :name %>
