--- a/app/views/loops/new.html.erb
+++ b/app/views/loops/new.html.erb
@@ -1,5 +1,6 @@
 
 <h1>Add a Loop</h1>
+<%= render('layouts/errors', object: @loop) %>
 <%= form_for @loop do |f| %>
 	<div class="form-group">
     <%= f.label :name %>
