--- a/app/views/badges/new.html.erb
+++ b/app/views/badges/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Add a Badge</h1>
+<h1>Create a New Badge</h1>
 <%= render('layouts/errors', object: @badge) %>
 <%= form_for @badge do |f| %>
 	<div class="form-group">
@@ -25,7 +25,14 @@
     <p><%= f.radio_button :badge_type, "loop" %>
     <%= f.label :badge_type, "Completed Loop - for completing all trails in a loop" %></p>
   </div>
-	<%= f.label :trail_ids,  "Which trail(s) is this badge available on?" %><br>
-  <%= f.collection_check_boxes :trail_ids, Trail.all, :id, :name %>
+  <div class="form-group">
+  	<%= f.label :trail_ids,  "Which trail(s) is this badge available on?" %><br>
+    <%= f.collection_check_boxes :trail_ids, Trail.all, :id, :name %>
+  </div>
+  <div class="form-group">
+    <%= f.label :image, "Upload the badge image" %>
+    <%= f.file_field :image %>
+  </div>
+
  	<%= f.submit class: "btn btn-success" %>
 <% end %>
