--- a/app/views/trails/new.html.erb
+++ b/app/views/trails/new.html.erb
@@ -10,10 +10,10 @@
 		<%= f.label :length %>
     <%= f.text_field :length %>
   </div>
-  <div class="form-group">
+<!--   <div class="form-group">
   	<%= f.label :location %>
     <%= f.text_field :location%>
-  </div>
+  </div> -->
   <div class="form-group">
   	<%= f.label :difficulty %>
     <%= f.text_field :difficulty%>
