--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,5 +2,5 @@ Welcome, <h4><%= @user.name %></h4>
 
 <h4>Your Badges</h4>
 <% @user.badges.each do |badge| %>
-	<%= badge.name %>
+	<%= image_tag badge.image.url %><%= badge.name %>
 <% end %>
