--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,12 +8,12 @@
 </head>
 <body>
 <div class="container" id="main">
-    <div class="navbar navbar-default navbar-fixed-top">
+  <div class="navbar navbar-default navbar-fixed-top">
     <%= link_to "Home", root_url, class: "navbar-brand pull-left" %>
     <%= link_to "Loops", loops_path, class: "navbar-text pull-left" %>
     <%= link_to "Trails", trails_path, class: "navbar-text pull-left" %>
     <%= link_to "Badges", badges_path, class: "navbar-text pull-left" %>
-    
+  
     <div class="navbar-text">
       <center>
         <%= flash[:notice] %>
@@ -21,28 +21,28 @@
         <%= flash[:error] %>
       </center>
     </div>
-    <% if user_signed_in? %>
-      <%= link_to "Log Out", destroy_user_session_path, method: "delete", class: "navbar-text pull-right" %>
-      <div class="navbar-text pull-right">
-        Logged in as &nbsp; <%= link_to current_user.email, user_path(current_user) %>
-      </div>
-      <% if current_user.admin %>
-      </div>
-        <div class="navbar navbar-default navbar-fixed-top" id="nav-admin">
-          <div class="navbar-text">Admin Options</div>
-          <%= link_to "Add a Loop", new_loop_path, class: "navbar-text pull-left" %>
-          <%= link_to "Add a Trail", new_trail_path, class: "navbar-text pull-left" %>
-          <%= link_to "Add a Badge", new_badge_path, class: "navbar-text pull-left" %>
+      <% if user_signed_in? %>
+        <%= link_to "Log Out", destroy_user_session_path, method: "delete", class: "navbar-text pull-right" %>
+        <div class="navbar-text pull-right">
+          Logged in as &nbsp; <%= link_to current_user.email, user_path(current_user) %>
         </div>
+        <% if current_user.admin %>
+        </div>
+          <div class="navbar navbar-default navbar-fixed-top" id="nav-admin">
+            <div class="navbar-text">Admin Options</div>
+            <%= link_to "Add a Loop", new_loop_path, class: "navbar-text pull-left" %>
+            <%= link_to "Add a Trail", new_trail_path, class: "navbar-text pull-left" %>
+            <%= link_to "Add a Badge", new_badge_path, class: "navbar-text pull-left" %>
+          </div>
+        <% end %>
+      <% else %>
+        <%= link_to "Sign Up", new_user_registration_path, class: "navbar-text pull-right" %>
+        <%= link_to "Log In", new_user_session_path, class: "navbar-text pull-right" %>
       <% end %>
-    <% else %>
-      <%= link_to "Sign Up", new_user_registration_path, class: "navbar-text pull-right" %>
-      <%= link_to "Log In", new_user_session_path, class: "navbar-text pull-right" %>
-  </div>    
-  <% end %>
-
-
+  </div>
+<div class="container">
   <%= yield %>
+</div>
 </div>
 </body>
 </html>
