initalize users with total_hiked and highest_summit. initialize trail with summit heigh

--- a/app/views/trails/new.html.erb
+++ b/app/views/trails/new.html.erb
@@ -8,7 +8,11 @@
   </div>
 	<div class="form-group">
 		<%= f.label :length %>
-    <%= f.text_field :length %>
+    <%= f.text_field :length, "Distance (miles)" %>
+  </div>
+  <div class="form-group">
+    <%= f.label :summit %>
+    <%= f.text_field :summit, "Summit (feet)" %>
   </div>
 <!--   <div class="form-group">
   	<%= f.label :location %>
