--- a/app/views/trails/new.html.erb
+++ b/app/views/trails/new.html.erb
@@ -7,12 +7,12 @@
     <%= f.text_field :name, autofocus: :true %>
   </div>
 	<div class="form-group">
-		<%= f.label :length %>
-    <%= f.text_field :length, "Distance (miles)" %>
+		<%= f.label :length, "Distance (miles)" %>
+    <%= f.text_field :length %>
   </div>
   <div class="form-group">
-    <%= f.label :summit %>
-    <%= f.text_field :summit, "Summit (feet)" %>
+    <%= f.label :summit, "Summit (feet)" %>
+    <%= f.text_field :summit %>
   </div>
 <!--   <div class="form-group">
   	<%= f.label :location %>
