rename length to distance on trail model

--- a/app/views/trails/show.html.erb
+++ b/app/views/trails/show.html.erb
@@ -1,6 +1,7 @@
 <h1><%= @trail.name %></h1>
 <h4>Details:  </h4>
-<p><b>Length:  </b><%= @trail.length %> Miles Roundtrip</p> 
+<p><b>Length:  </b><%= @trail.distance %> Miles Roundtrip</p>
+<p><b>Summit:  </b><%= @trail.summit %></p></p>
 <p><b>Difficulty:  </b><%= @trail.difficulty %></p></p>
 <p><b>Description:  </b><%= @trail.description %></p>
 
