--- a/app/views/trails/new.html.erb
+++ b/app/views/trails/new.html.erb
@@ -7,8 +7,8 @@
     <%= f.text_field :name, autofocus: :true %>
   </div>
 	<div class="form-group">
-		<%= f.label :length, "Distance (miles)" %>
-    <%= f.text_field :length %>
+		<%= f.label :distance, "Distance (miles)" %>
+    <%= f.text_field :distance %>
   </div>
   <div class="form-group">
     <%= f.label :summit, "Summit (feet)" %>
