--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -4,3 +4,31 @@
 #nav-admin {
 	margin-top: 50px;
 }
+label {
+  font-size: 1.2em;
+}
+form {
+  padding: 20px 0px 20px 20px;
+}
+.form_color {
+  background-color: tan;
+}
+.input_field {
+  float: right;
+  margin-right: 75px;
+  width: 275px;
+}
+.text_field {
+  clear: both;
+  display:block;
+  width: 445px;
+  height: 150px;
+}
+#trail_loop_id {
+  margin-left: 52px;
+}
+label {
+  margin-right: 10px;
+  margin-left: 5px;
+}
+
