--- a/app/views/badges/new.html.erb
+++ b/app/views/badges/new.html.erb
@@ -1,13 +1,14 @@
 <h1>Create a New Badge</h1>
+<div class="col-md-6 form_color">
 <%= render('layouts/errors', object: @badge) %>
 <%= form_for @badge do |f| %>
 	<div class="form-group">
     <%= f.label :name %>
-    <%= f.text_field :name, autofocus: :true %>
+    <%= f.text_field :name, autofocus: :true, class: "input_field" %>
   </div>
   <div class="form-group">
     <%= f.label :requirements %>
-    <%= f.text_field :requirements %>
+    <%= f.text_field :requirements, class: "input_field" %>
   </div>
    <div class="form-group">
     <p><%= f.label :badge_type, "Type of Badge" %></p>
@@ -36,3 +37,4 @@
 
  	<%= f.submit class: "btn btn-success" %>
 <% end %>
+</div>
