added bootstrap styling to devise sign up and sign in forms

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,9 +42,11 @@
         <%= link_to "Log In", new_user_session_path, class: "navbar-text pull-right" %>
       <% end %>
   </div>
-  <div class="container">
+
+  <div class="col-md-12">
     <%= yield %>
   </div>
+
 </div>
 </body>
 </html>
