--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -5,7 +5,9 @@ div {
 	background-color: white;
 }
 #main {
-	padding-top: 100px;
+	padding-top: 40px;
+	padding-bottom: 50px;
+	margin-top: 70px;
 	font-family: 'Fira Sans', sans-serif;
 }
 #nav-admin {
