--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,13 @@
-<div class='col-md-6'>
-	<h1>Welcome</h1>
-test
-</div>
+
+   	<div class="text-center">
+	    <h1>Trails</h1>
+	    <p class="lead">Track progess of recent hikes and earn badges along the way!</p>
+	    <hr>
+  	</div>
+ 		<div class="col-md-12">
+  	<ul>
+	  	<li>With Trails, users can keep an updates list of their recent hikes while earning badges for their progress. </li> 
+	  	<li>For every trail you hike, you earn a badge that is displayed on your user profile. </li>
+	  	<li>Earn badges for cumulative stats along the way such as trail distance, elevation, and total miles hiked.</li>
+	  </ul>
+	</div>
