--- a/app/assets/stylesheets/form_styles.css
+++ b/app/assets/stylesheets/form_styles.css
@@ -8,7 +8,7 @@ form {
   padding: 20px 0px 20px 20px;
 }
 .form_color {
-  background-color: tan;
+  background-color: #D6D6C2;
 }
 .input_field {
   float: right;
