--- a/app/views/badges/new.html.erb
+++ b/app/views/badges/new.html.erb
@@ -1,4 +1,4 @@
-
+<%= render 'layouts/admin' %>
   <h1>Create a New Badge</h1>
   <div class="col-md-7 form_color">
   <%= render('layouts/errors', object: @badge) %>
