--- a/app/views/loops/new.html.erb
+++ b/app/views/loops/new.html.erb
@@ -1,4 +1,4 @@
-
+<%= render 'layouts/admin' %>
 <h1>Add a Loop</h1>
 <div class="col-md-6 form_color">
 <%= render('layouts/errors', object: @loop) %>
