--- a/app/views/trails/new.html.erb
+++ b/app/views/trails/new.html.erb
@@ -1,3 +1,4 @@
+<%= render 'layouts/admin' %>
 <h1>Add a Trail</h1>
 
 <div class="col-md-7 form_color">
@@ -21,7 +22,7 @@
   </div> -->
   <div class="form-group">
   	<%= f.label :difficulty %>
-    <%= f.text_field :difficulty, class: "input_field" %>
+    <%= f.text_field :difficulty,  class: "input_field" %>
   </div>
   <div class="form-group">
   	<%= f.label :loop_id, "Which loop?" %>
