moved badge form to partial

--- a/app/views/badges/new.html.erb
+++ b/app/views/badges/new.html.erb
@@ -1,42 +1,2 @@
-<%= render 'layouts/admin' %>
   <h1>Create a New Badge</h1>
-  <div class="col-md-7 form_color">
-  <%= render('layouts/errors', object: @badge) %>
-  <%= form_for @badge do |f| %>
-  	<div class="form-group">
-      <%= f.label :name %>
-      <%= f.text_field :name, autofocus: :true, class: "input_field" %>
-    </div>
-    <div class="form-group">
-      <%= f.label :requirements %>
-      <%= f.text_field :requirements, class: "input_field" %>
-    </div>
-     <div class="form-group">
-      <p><%= f.label :badge_type, "Type of Badge" %></p>
-      <p><%= f.radio_button :badge_type, "distance" %>
-      <%= f.label :badge_type, "Trail Distance - for a single trail", :value => "distance" %></p>
-
-      <p><%= f.radio_button :badge_type, "summit" %>
-      <%= f.label :badge_type, "Summit Height - for various summit heights", :value => "summit" %></p>
-
-      <p><%= f.radio_button :badge_type, "total" %>
-      <%= f.label :badge_type, "Total Distance - for total distance hiked", :value => "total" %></p>
-
-  		<p><%= f.radio_button :badge_type, "trail" %>
-      <%= f.label :badge_type, "Completed Trail - for completing a specific trail", :value => "trail" %></p>
-      <p><%= f.radio_button :badge_type, "loop" %>
-      <%= f.label :badge_type, "Completed Loop - for completing all trails in a loop", :value => "loop" %></p>
-    </div>
-    <div class="form-group">
-    	<%= f.label :trail_ids,  "Which trail(s) is this badge available on?" %><br>
-      <%= f.collection_check_boxes :trail_ids, Trail.all, :id, :name %>
-    </div>
-    <div class="form-group">
-      <%= f.label :image, "Upload the badge image" %>
-      <%= f.file_field :image %>
-    </div>
-
-   	<%= f.submit class: "btn btn-success" %>
-  <% end %>
-  </div>
-
+  <%= render 'form' %>
