--- a/app/views/loops/show.html.erb
+++ b/app/views/loops/show.html.erb
@@ -6,3 +6,5 @@
 		<li><%= link_to trail.name, trail_path(trail) %></li>
 	<% end %>
 </ul>
+
+<%= link_to 'Edit', edit_loop_path(@loop), :class => 'btn btn-danger' %>
