allow badge content to be edited

--- a/app/views/badges/show.html.erb
+++ b/app/views/badges/show.html.erb
@@ -10,3 +10,5 @@
 	<li><%= link_to trail.name, trail_path(trail) %></li>
 <% end %>
 </ul>
+
+<%= link_to 'Edit', edit_badge_path(@badge), :class => 'btn btn-danger' %>
