--- a/app/views/badges/show.html.erb
+++ b/app/views/badges/show.html.erb
@@ -11,4 +11,9 @@
 <% end %>
 </ul>
 
-<%= link_to 'Edit', edit_badge_path(@badge), :class => 'btn btn-danger' %>
+<%= link_to 'Edit', edit_badge_path(@badge), :class => 'btn btn-success' %>
+
+<%= link_to "Delete", badge_path(@badge),
+                         :data => {:confirm => "You sure?",
+                                   :method => "delete"},
+                         :class => "btn btn-danger" %>
