--- a/app/views/loops/show.html.erb
+++ b/app/views/loops/show.html.erb
@@ -7,4 +7,9 @@
 	<% end %>
 </ul>
 
-<%= link_to 'Edit', edit_loop_path(@loop), :class => 'btn btn-danger' %>
+<%= link_to 'Edit', edit_loop_path(@loop), :class => 'btn btn-success' %>
+
+<%= link_to "Delete", loop_path(@loop),
+                         :data => {:confirm => "You sure?",
+                                   :method => "delete"},
+                         :class => "btn btn-danger" %>
