--- a/app/views/trails/show.html.erb
+++ b/app/views/trails/show.html.erb
@@ -13,4 +13,9 @@
 <% end %>
 </ul>
 
-<%= link_to 'Edit', edit_trail_path(@trail), :class => 'btn btn-danger' %>
+<%= link_to 'Edit', edit_trail_path(@trail), :class => 'btn btn-success' %>
+
+<%= link_to "Delete", trail_path(@trail),
+                         :data => {:confirm => "You sure?",
+                                   :method => "delete"},
+                         :class => "btn btn-danger" %>
